Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -259,7 +259,6 @@ nav {
                         color: fade(@color-swatch7, 30%);
                         line-height: @font-swatch6-line-height;
                         letter-spacing: @font-swatch6-letter-spacing;
-                        text-align: center;
                         &:hover {
                             background: lighten(@color-swatch6, 3%);
                             color: @color-swatch1;
@@ -281,7 +280,6 @@ nav {
                             line-height: @font-swatch6-line-height;
                             letter-spacing: @font-swatch6-letter-spacing;
                             position: relative;
-                            text-align: center;
                             &:hover {
                                 background: lighten(@color-swatch6, 3%);
                                 color: @color-swatch1;
